// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doesn't render the next step after the page is submitted when \`manageStepTransitions\` is false 1`] = `
<div>
  <div
    data-testid="test-div"
  >
    Wrapped
     
    div
  </div>
  <div
    data-testid="test-img"
  >
    Wrapped
     
    img
  </div>
  <div
    data-testid="test-function"
  >
    Wrapped
     
    TestFunctionComponent
  </div>
  <div
    data-testid="test-class"
  >
    Wrapped
     
    TestClassComponent
  </div>
  <button
    data-testid="submit"
  >
    Next page
  </button>
</div>
`;

exports[`renders correctly with all props 1`] = `
Array [
  <div
    data-testid="test-img-2"
  >
    Wrapped
     
    img
  </div>,
  <button
    data-testid="submit"
    onClick={[Function]}
  >
    Next page
  </button>,
]
`;

exports[`renders correctly with steps containing dynamic components 1`] = `
Array [
  <div
    data-testid="test-img"
  >
    Wrapped
     
    img
  </div>,
  <div
    data-testid="test-dynamic-component"
  >
    Wrapped 
    TestDynamicComponent
  </div>,
  <button
    data-testid="submit"
    onClick={[Function]}
  >
    Next page
  </button>,
]
`;

exports[`renders correctly with steps containing dynamic components without a database context 1`] = `
Array [
  <div
    data-testid="test-img"
  >
    Wrapped
     
    img
  </div>,
  <div
    data-testid="test-dynamic-component"
  >
    Wrapped 
    TestDynamicComponent
  </div>,
  <button
    data-testid="submit"
    onClick={[Function]}
  >
    Next page
  </button>,
]
`;

exports[`renders correctly without optional props 1`] = `
Array [
  <div
    data-testid="test-div"
  >
    Wrapped
     
    div
  </div>,
  <div
    data-testid="test-img"
  >
    Wrapped
     
    img
  </div>,
  <div
    data-testid="test-function"
  >
    Wrapped
     
    TestFunctionComponent
  </div>,
  <div
    data-testid="test-class"
  >
    Wrapped
     
    TestClassComponent
  </div>,
  <button
    data-testid="submit"
    onClick={[Function]}
  >
    Next page
  </button>,
]
`;

exports[`renders the next step when the page is submitted 1`] = `
<div>
  <div
    data-testid="test-img-2"
  >
    Wrapped
     
    img
  </div>
  <button
    data-testid="submit"
  >
    Next page
  </button>
</div>
`;

exports[`throws when attempting to render from an unknown slug 1`] = `
Array [
  Array [
    "The above error occurred in the <Orchestrator> component:
    in Orchestrator
    in TestErrorBoundary

React will try to recreate this component tree from scratch using the error boundary you provided, TestErrorBoundary.",
  ],
]
`;

exports[`throws when attempting to render from an unknown slug 2`] = `
<span>
  Caught error: 
  Error: Step with slug "unknown-slug" could not be found
</span>
`;
